# heavymetal-backend

./: .gitignore  README.md  __main__.py  auth.py  db.py  db.sqlite3  db_builder.py  env.example  git_push.py  hello.py  main.py  oauth2.py  pyproject.toml  schemas.py  security.py  stream_audio_example.html  tach.toml  utils.py
.github/workflows/: code_quality.yml
routes/: __init__.py  auth.py  songs.py
