[project]
name = "heavymetal"
version = "0"
description = "Backend for the heavymetal music streaming service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0",
    "colorama>=0.4.6",
    "fastapi>=0.115.8",
    "mutagen>=1.47.0",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
heavymetal = "heavymetal.main:app"
